--- a/.gitignore
+++ b/.gitignore
@@ -15,8 +15,10 @@
 *.out
 
 # Dependency directories (remove the comment below to include it)
-# vendor/
-
+vendor/
+test/
+agaSyncBucket
+agaSyncBucket.exe
 # Go workspace file
 go.work
 go.work.sum
